--- a/Frontend/portfolio/package.json
+++ b/Frontend/portfolio/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
