--- a/Frontend/portfolio/package.json
+++ b/Frontend/portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Prakashjp2255.github.io/personal-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +28,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
